styles/_custom.scss
.masthead {
  .container {
    .user-tools {
      top: 11px;
      background-color: rgba(34, 34, 34, 0.7);
    }
  }
}

.breadcrumb {
  margin: 15px 0 0;
}

#user-profile {
  a.btn-user-whole {
    &:link, &:visited {
      padding: 17px 15px 12px 15px;
    }
  }
}

.image-modal .img-wrapper .modal-image {
  height: 100%;
  object-fit: scale-down;
}

.g-upper-body-title {
  @include smalldesktop {
    margin-left: calc(((100vw - 900px) / 2) - 20px);
  }

  @media (min-width: 1320px) {
    margin-left: calc((100vw - 1320px) / 2);
  }
}

.g-upper-body {
  max-width: none;

  @media (min-width: #{$desktop-width}) and (max-width: 1174px) {
    margin-left: 225px;
  }

  @media (min-width: 1175px) {
    margin-left: 270px;
  }

  h1.headline {
    font-size: 34px;
  }

  .search-topper {
    max-width: 900px;
  }

  .kicker {
    max-width: 900px;
  }
}

.g-body .g-left-panel {
  @include desktop {
    width: 200px;
  }

  .children-view {
    ul.children {
      padding-left: 0;
      list-style-type: none;
    }

    li {
      text-indent: 0;
      padding: 3px 5px 3px 0;
      font-size: 15px;
      line-height: 20px;
      box-sizing: border-box;

      a {
        color: $black;
      }
    }
  }
}

.g-body .g-main-content {
  max-width: 900px;

  @media (min-width: #{$desktop-width}) and (max-width: 1174px) {
    margin-left: 225px;
  }

  @media (min-width: 1175px) {
    margin-left: 270px;
  }

  p {
    margin-bottom: 20px;
  }

  td p {
    margin-bottom: 0;
  }

  table {
    margin-bottom: 15px;
  }

  p, ul, li, dt, dd {
    @include tablet{
      font-size: 1rem;
    }
    @include desktop{
      font-size: 1rem;
    }
  }

  h1 {
    font-size: 24px;
  }

  h2 {
    font-size: 20px;
    line-height: 30px;
  }

  img {
    border: none;
    margin: 0 10px 5px 0;
    padding: 0;
  }

  code {
    color: $gray-20;
    background: $gray-80;
  }

  p code {
    font-size: 0.9rem;
  }

  pre + p {
    margin-bottom: 0px;
  }

  pre {
    background: $gray-80;
    padding: 15px 5px 15px 0;
    margin: -40px 15px 0 0;
    max-width: 800px;
    width: unset;

    &:before {
      display: none;
    }

    .line-number::before {
      width: 1em;
    }
  }

  ul {
    li {
      &:before {
        position: relative;
        top: -2px;
        font-size: 0.7rem;
      }
    }
  }

  .image-wrapper {
    display: inline-block;

    .expand-image-btn {
      bottom: 15px;
    }
  }

  .children-container {
    @include desktop {
      display: none;
    }

    .section-kicker {
      font-family: $font-sans;
      font-weight: 600;
      text-transform: capitalize;
      color: $black;
      font-size: 18px;
      line-height: 24px;
      margin-bottom: 10px;
      margin-left: -20px;
    }
  }

  .table-of-contents {
    margin-bottom: 10px;

    @include desktop {
      display: none;
    }

    .section-kicker {
      font-family: $font-sans;
      font-weight: 600;
      color: $black;
      font-size: 18px;
      line-height: 24px;
      margin-bottom: 5px;
    }

    ul.section, ul.sibling {
      list-style-type: none;
      margin: 0 0 20px 0;
      padding: 0;

      li {
        display: block;
        font-size: 16px;
        line-height: 20px;
        text-indent: -4px;
        padding: 4px 0px;
        font-weight: 400;

        a,
        strong {
          padding: 3px 5px;
          color: $gray-20;
        }

        a:hover {
          color: $accent;
        }

      }
    }

    ul.section {
      padding-bottom: 10px;
      border-bottom: 1px solid $gray-60;
    }

    ul.subsection {
      padding:0;

      li {
        margin-left: 17px;
        border-bottom: 0;
        text-indent: 3px;

        &:before {
          content: "";
          border-bottom: 1px solid $gray-50;
          width: 10px;
          display: inline-block;
          vertical-align: middle;
          margin: 0 2px 0 -20px;
        }
      }
    }
  }
}

.g-body .g-footer {
  max-width: 900px;

  @media (min-width: #{$desktop-width}) and (max-width: 1174px) {
    margin-left: 225px;
  }

  @media (min-width: 1175px) {
    margin-left: 270px;
  }
}

#category-page-upper {
  .g-upper-body {
    max-width: 900px;
    margin-left: auto;
  }
}

#category-page {
  .g-main-content {
    margin-left: 0px;

    .children-container {
      display: block;
    }
  }
}

